@@ -52,6 +52,7 @@ gchar *gedit_convert_to_utf8   (const gchar          *content,
 gchar *gedit_convert_from_utf8 (const gchar          *content, 
 				gsize                 len,
 				const GeditEncoding  *encoding,
+				gsize                *new_len,
 				GError              **error);
 
 #endif /* __GEDIT_CONVERT_H__ */
